--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ header nav ul li a:hover {
   animation: sliderShape 5s linear infinite;
   display: block;
   z-index: -1;
-  background-image: url('https://raw.githubusercontent.com/AmritSahoo-ops/OCTANET-INTERNSHIP-/main/images/Image_Editor(1).png');
+  background-image: url('https://raw.githubusercontent.com/soumya2004-panda/OCTANET-INTERNSHIP/refs/heads/main/images/Panda-Image.jpg');
   background-repeat: no-repeat;
   background-position: center;
   -webkit-animation: sliderShape 5s linear infinite;
